--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -278,6 +278,10 @@ ul {
     z-index: 1;
 }
 
+.titmelinemob {
+    display: none;
+}
+
 .thm-btn:before {
     transition-duration: 800ms;
     position: absolute;
@@ -12480,10 +12484,10 @@ body.boxed-wrapper {
 
     .main-timeline9 .circle,
     .main-timeline9 .timeline:nth-child(2n) .circle {
-        width: 130px;
-        height: 130px;
+        /* width: 130px; */
+        /* height: 130px; */
         float: none;
-        margin: 50px auto;
+        margin: 15px 72px 0;
     }
 
     .main-timeline9 .timeline-content:before {
