--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -8482,8 +8482,9 @@ body.locked .page-wrapper {
     position: relative;
     display: block;
     padding: 10px 20px 1px;
-    border: 1px solid #ddd;
-    background-color: #f37024;
+    /* border: 1px solid #ddd; */
+    /* background-color: #f37024; */
+    background-color: var(--khater-extra);
     overflow: hidden;
     z-index: 1;
 }
