--- a/public/site/assets/css/khater-responsive.css
+++ b/public/site/assets/css/khater-responsive.css
@@ -1311,7 +1311,7 @@
 
     .about-four__right {
         margin-left: 0;
-        margin-top: 60px;
+        /* margin-top: 60px; */
     }
 
     .become-volunteer-page__left {
