--- a/public/site/assets/css/khater-responsive.css
+++ b/public/site/assets/css/khater-responsive.css
@@ -1527,7 +1527,10 @@
 
 @media only screen and (max-width: 1199px) {
     .btnresponsev {
-        display: none !important;
+        padding: 0px 0px !important;
+        border: none !important;
+        background-color: transparent !important;
+        /* display: none !important; */
     }
 
     .viewAllStories {
