--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -8471,7 +8471,7 @@ body.locked .page-wrapper {
         display: block;
         padding: 10px 20px 1px;
         /* border: 2px solid #ddd; */
-        border-radius: 10px;
+        /* border-radius: 10px; */
         overflow: hidden;
         z-index: 1;
     }
