--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -11119,7 +11119,7 @@ body.locked .page-wrapper {
 .about-four {
     position: relative;
     display: block;
-    /* padding: 40px 0 0; */
+    padding: 40px 0 0;
 }
 
 .about-four__left {
