--- a/public/site/assets/css/khater-responsive.css
+++ b/public/site/assets/css/khater-responsive.css
@@ -1035,7 +1035,7 @@
     }
 
     .about-two__right {
-        margin-top: 60px;
+        /* margin-top: 60px; */
     }
 
     .about-two__points {
